WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
24809
background-clip/origin values are wrong
https://bugs.webkit.org/show_bug.cgi?id=24809
Summary
background-clip/origin values are wrong
Dave Hyatt
Reported
2009-03-25 12:12:54 PDT
Instead of border, content, padding the values now specified in the draft are border-box, content-box and padding-box. We need to just support both types of values on our -webkit- version of the properties. If/when we drop the -webkit-, then we can drop the old values from the final version.
Attachments
Patch
(7.29 KB, patch)
2009-03-25 12:18 PDT
,
Dave Hyatt
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2009-03-25 12:18:48 PDT
Created
attachment 28938
[details]
Patch
Simon Fraser (smfr)
Comment 2
2009-03-25 12:21:18 PDT
Comment on
attachment 28938
[details]
Patch r=me
Dave Hyatt
Comment 3
2009-03-25 12:23:20 PDT
Fixed in
r41979
.
Simon Fraser (smfr)
Comment 4
2009-03-25 15:38:39 PDT
Some layout tests fixed in
r41993
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug