WebCore:

2009-03-25  David Hyatt  <hyatt@apple.com>

        Reviewed by Simon Fraser.

        https://bugs.webkit.org/show_bug.cgi?id=24809, background-clip/origin don't use the correct
        values.  Add support for the new values (while preserving the old values for backwards
        compatibility).

        Changed some existing test cases to use the new values.

        * css/CSSParser.cpp:
        (WebCore::CSSParser::parseFillProperty):
        * css/CSSPrimitiveValueMappings.h:
        (WebCore::CSSPrimitiveValue::CSSPrimitiveValue):
        (WebCore::CSSPrimitiveValue::operator EFillBox):
        * css/CSSValueKeywords.in:

LayoutTests:

2009-03-25  David Hyatt  <hyatt@apple.com>

        Reviewed by Simon Fraser.

        Change a few test cases to use the new values just to verify that they work.

        https://bugs.webkit.org/show_bug.cgi?id=24809

        * fast/backgrounds/size/backgroundSize17.html:
        * fast/backgrounds/size/backgroundSize18.html:
        * fast/backgrounds/size/backgroundSize19.html:
        * fast/gradients/simple-gradients.html:



Canonical link: https://commits.webkit.org/34036@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41979 268f45cc-cd09-0410-ab3c-d52691b4dbfc